fix the problem of buttons appearing like cropped

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -14,7 +14,7 @@
     border-radius: 10px;
     /* box-shadow: [h-offset] [v-offset] [blur-radius] [spread-radius] [color]; */
     box-shadow: 0px 2px 8px 3px rgba(0, 0, 0, 0.26);
-    margin-top: 1rem;
+    margin-top: 1rem 0rem;
     max-width: 650px;
     /* width: auto; */
   }
@@ -32,9 +32,9 @@
       border-radius: 5px;
       background-color: #1a4ea1;
       cursor: pointer;
-      width: 30%;
-      max-width: 40%;
-      min-width: 15%;
+      width: 300px;
+      max-width: 400px;
+      min-width: 30px;
   }
   button:focus {
       outline: none;
@@ -137,6 +137,9 @@ p {
         height: 270px;
         height: 270px;
     }
+    button {
+        width: 280px;
+    }
 }
 @media (max-width: 992px) {
     #h2 {
@@ -179,7 +182,10 @@ p {
     
     #user-input,
     #filter {
-    margin-left: 2rem;
+    margin-left: 1rem;
+    }
+    button{
+        width: 170px;
     }
 }
 /* 
